text updates, added sup files to git

--- a/manuscript_01_gigascience_resubmission.Rmd
+++ b/manuscript_01_gigascience_resubmission.Rmd
@@ -163,7 +163,7 @@ We propose that by re-processing publicly available raw single cell transcriptom
 
 ## We identify `r meta_filter %>% pull(study_accession) %>% unique() %>% length() - 1` ocular scRNA datasets across 3 species
 
-The first step in building a meta-atlas is identifying studies to draw the data from. We identified ocular single cell RNA sequencing (scRNA) studies by querying PubMed, the Sequence Read Archive (SRA), and the European Nucleotide Archive (ENA) for the inclusive terms "retina", "single cell", "scRNA", "ocular", "eye", "transcriptome." We then hand filtered the results to only keep ocular and normal (non-perturbed or mutagenized) data from single cell RNA-seq technology. On December 2020 we identified `r meta_filter %>% pull(study_accession) %>% unique() %>% length() - 1` deposited datasets that have been published in `r meta_filter %>% pull(Citation) %>% unique() %>% length()` publications (`r fig_cap(name = 'fig1', display = 'cite')`). To provide a non-ocular reference we also downloaded the raw sequence data from the Tabula Muris project for re-processing. In cases where the fastq file from the SRA was not processed properly, we acquired the bam files (SRA or personal correspondence) and re-extracted the fastq. After downloading all the data we had 11 TB across `r scEiaD_2020_v01 %>% tbl('metadata_filter') %>% pull(sample_accession) %>% unique() %>% length()` fastq file sets. 
+The first step in building a meta-atlas is identifying studies to draw the data from. We identified ocular single cell RNA sequencing (scRNA) studies by querying PubMed, the Sequence Read Archive (SRA), and the European Nucleotide Archive (ENA) for the inclusive terms "retina", "single cell", "scRNA", "ocular", "eye", "transcriptome." We then hand filtered the results to only keep ocular and normal (non-perturbed or mutagenized) data from single cell RNA-seq technology. On December 2020 we identified `r meta_filter %>% pull(study_accession) %>% unique() %>% length() - 1` deposited datasets that have been published in `r meta_filter %>% pull(Citation) %>% unique() %>% length()` publications (`r fig_cap(name = 'fig1', display = 'cite')`). To provide a non-ocular reference we also downloaded the raw sequence data from the Tabula Muris project for re-processing. In cases where the fastq file from from the SRA was not processed properly (always 10x v2 or v3), we acquired the 10x bam files (via SRA or personal correspondence) and re-extracted the fastq. After downloading all the data we had 11 TB across `r scEiaD_2020_v01 %>% tbl('metadata_filter') %>% pull(sample_accession) %>% unique() %>% length()` fastq file sets. 
 
 ```{r fig1, fig.width=12, fig.height=6, fig.cap=fig1_cap, echo=FALSE, message = FALSE, warning = FALSE}
 fig1_cap <- fig_cap(name='fig1', caption =  'a. Schematic of the retina with major cell types delineated b. Simplified directed workflow of major steps in scEiaD creation from raw counts to gene counts, benchmarking optimal integration methods (SnakePOP) to produce batch corrected latent dimensions (Latent Dims), then downstream analysis outputs like clustering, differential gene testing (Diff Testing), and 2D UMAP visualization. c. Counts of published papers and batches (unique biological samples) for each scRNA technlogy, split by organism d. Cell type counts extracted from published studies for the more common retina cell types, split by species. Count of study accessions for each species overlaid on bar plot.')
@@ -183,15 +183,15 @@ Droplet and well based scRNA-seq technologies require different quantification a
 
 ## `r qc %>% nrow() %>% as.integer() %>% format(., big.mark=",", scientific=FALSE)` cells before quality control
 
-Gene-level counts were quantified with the kallisto bustools pseudo-aligner for both the droplet and well based samples. After empty droplet removal, we had `r format(qc %>% nrow() %>% as.integer() , big.mark=",", scientific=FALSE)` cells. We then removed cells which had more than 10% mitochondrial reads across all gene counts or fewer than 200 unique genes quantified. After these standard quality control steps we were left with `r format(umapRef %>% nrow, big.mark = ",", scientific=FALSE)` cells (`r supFig_cap(name = 'supFig1', display = 'cite')`). 
+Gene-level counts were quantified with the kallisto bustools pseudo-aligner for both the droplet and well based samples. After empty droplet removal, we had `r format(qc %>% nrow() %>% as.integer() , big.mark=",", scientific=FALSE)` cells. We then removed cells which had more than 10% mitochondrial reads across all gene counts, fewer than 200 unique genes quantified, or were identified as an *in silico* doublet (see methods). After these quality control (for review see [@lueckenCurrentBestPractices2019] ) steps we were left with `r format(meta_filter %>% nrow, big.mark = ",", scientific=FALSE)` cells (`r supFig_cap(name = 'supFig1', display = 'cite')`). 
 
 A core objective of many scRNA based studies is labeling the cell types. As this information is crucial to assess dataset integration and provide an accurate reference for user querying, we extracted individual cell labels with a combination of inspecting the GEO web site, supplemental information from the publication, web resources (e.g. a web app was created for the paper), and personal correspondence. After normalizing cell type name nomenclature, we obtained labels for `r meta_filter$CellType %>% table() %>% sum() %>% format(., big.mark=",", scientific=FALSE)` cells across `r meta_filter$CellType %>% table() %>% length() ` cell types (`r supTab_cap(name = 'supTab1_CTcounts', display = 'cite')`). 
 
 ## Running `r methods %>% length()` tools in a Snakemake-based system
 
-Disentangling the technical and biological effects when integrating multiple datasets is crucial. We define batch as each unique biological sample and assume each study is at least one unique sample. We studied the metadata and methods of each study to identify the unique biological samples. Within the current scEiaD data set we identified `r umapRef %>% pull(batch) %>% unique() %>% length()` batches across `r umapRef %>% pull(study_accession) %>% unique() %>% length()` deposited datasets in `r umapRef %>% left_join(gse) %>% pull(PMID) %>% unique() %>% length()` published papers.
+Disentangling the technical and biological effects when integrating multiple datasets is crucial. We define batch as each unique biological sample and assume each study is at least one unique sample. We studied the metadata and methods of each study to identify the unique biological samples. Within the current scEiaD data set we identified `r umapRef %>% pull(batch) %>% unique() %>% length()` batches across `r umapRef %>% pull(study_accession) %>% unique() %>% length() - 1` deposited datasets in `r umapRef %>% left_join(gse) %>% pull(PMID) %>% unique() %>% length()` published papers.
 
-A wide variety of methods have been written for scRNA-seq integration. As we were uncertain which would perform the best, we ran `r methods %>% length()` tools with a commonly used set of key parameters like number of highly variable genes (HVG), size of latent dimensional space, and the number of nearest neighbors for the louvain clustering algorithm. The Snakemake system was used to automate the running of the wide variety of tools. In total 5,591 jobs were run to quantify gene expression and build the unified Seurat objects (SnakeQUANT) and 2,446 jobs were run to assess integration performance (SnakePOP).
+A wide variety of methods have been written for scRNA-seq integration. As we were uncertain which would perform the best, we ran `r methods %>% length()` tools with a commonly used set of key parameters like number of highly variable genes (HVG), number of latent dimensional space, and the number of nearest neighbors for the louvain clustering algorithm. The Snakemake system was used to automate the running of the wide variety of tools. In total 5,591 jobs were run to quantify gene expression and build the unified Seurat objects (SnakeQUANT) and 2,446 jobs were run to assess integration performance (SnakePOP).
 
 The two key metrics which have to be balanced in order to optimize integration performance are cell type or cluster purity (where different cell types or clusters should be homogenous) and batch mixing (the same cell types should be similar across independent studies). While these can be visually assessed by looking at marker gene expression across the 2D UMAP projection, it is more rigorous and scalable to quantify these diametrically opposed characteristics.
 
@@ -199,16 +199,19 @@ The two key metrics which have to be balanced in order to optimize integration p
 
 Multiple methods have been proposed to quantitatively evaluate batch correction. Some of these metrics evaluate the concordance between sets of labels, while other compute distances between the individual data points of a given set of labels. While any one of these methods can be useful, we propose that calculating and evaluating them in tandem provides greater accuracy for dataset integration. We developed the R package scPOP, a lightweight, low dependency R package which brings together the Local Simpson Index (LISI), Average Silhouette Width (ASW), Adjusted Rand Index (ARI) and Normalized Mutual Information (NMI) metrics from the R packages Harmony, kBET and aricode, respectively. The LISI and ASW were used to measure batch mixing (where lower is better), cell type mixing (higher is better), and cluster mixing (higher is better). NMI and ARI were used to assess the consistency of cell type to cluster assignment (where 1 is perfect correspondence between cluster and cell type).
 
-To visualize the interplay between batch mixing and cell type distinction we plot the batch mixing LISI score (which has been multiplied by -1) on the y-axis (higher is better) against the cluster LISI on the x-axis (higher is better). The best performer on both metrics will be in the top right corner  (`r supFig_cap(name = 'supFig_benchmark', display = 'cite')`a). In the same manner we plot the silhouette metric (`r supFig_cap(name = 'supFig_benchmark', display = 'cite')` b). To merge the different scores we define $sumZScale = \sum scale(m)$ where m is a metric (LISI by batch, LISI by cluster, LISI by cell type, silhouette by batch, silhouette by cluster, silhouette by celltype, NMI, and ARI).
+To visualize the interplay between batch mixing and cell type distinction we plot the batch mixing LISI score (which has been multiplied by -1) on the y-axis (higher is better) against the cluster LISI on the x-axis (higher is better). The best performer on both metrics will be in the top right corner  (`r supFig_cap(name = 'supFig_benchmark', display = 'cite')`a). In the same manner we plot the silhouette metric (`r supFig_cap(name = 'supFig_benchmark', display = 'cite')` b). To merge the different scores we define $sumZScale = \sum scale(m * weight)$ where m is a metric (LISI by batch, LISI by cluster, LISI by cell type, silhouette by batch, silhouette by cluster, silhouette by celltype, NMI, and ARI). Weight is set to one, but can be either explicitly set or randomly chosen should it be desired to change the influence of certain metrics.  
 
-On one extreme we have ComBat, which merges together different batches very well, but also mixes together the distinct cell types (`r fig_cap(name = 'figBenchmark', display = 'cite')`a). The other extreme is not using any batch integration method, where you see very distinct groups of cells, but also each nearly study is has a distinct region in the UMAP (`r fig_cap(name = 'figBenchmark', display = 'cite')`b). In our scEiaD dataset we see that like ComBat, Harmony and CCA are weighed more towards batch mixing then cluster and cell type purity. Scanorama, fastMNN, and bbknn prioritize cleanly separating the clusters. With our scEiaD meta-atlas insct, trVAE, and magic do not perform particularly well in batch mixing or cluster purity. For further qualitative investigation of the integration performance we provide the UMAP visualizations of each integration method, normalization, and latent dimensions colored by cell type, study accession, or organism as a supplementary file. 
+On one extreme we have ComBat, which merges together different batches very well, but also mixes together the distinct cell types (`r fig_cap(name = 'figBenchmark', display = 'cite')`a). The other extreme is not using any batch integration method, where you see very distinct groups of cells, but also each nearly study is has a distinct region in the UMAP (`r fig_cap(name = 'figBenchmark', display = 'cite')`b). In our scEiaD dataset we see that methods like ComBat, Harmony, scArches, CCA are weighed more towards batch mixing then cluster and cell type purity. Scanorama and bbknn prioritize cleanly separating the clusters. With our scEiaD meta-atlas insct, trVAE, and magic do not perform particularly well in batch mixing or cluster purity. Overall, CCA, fastMNN, and scVI perform best on this particular dataset. For further qualitative investigation of the integration performance we provide the UMAP visualizations of each integration method, normalization, and latent dimensions colored by cell type, study accession, or organism as supplementary files. 
 
-As the LISI and silhouette metrics provide independent cluster and cell type ("purity") and batch ("mixing") scores we looked to see whether the sumZScale scoring is highly influenced by changing the weight placed on purity or mixing by multiplying either by a multiplier of three (`r supFig_cap(name = 'supFig_benchmark_weighting', display = 'cite')`). While scVI still performs well, no matter the weight chosen, there were some changes when more weight was placed on batch mixing. Most notably the 8 latent dims with fastMNN receives a higher score when a higher weight was placed on batch mixing and CCA's performance with 30 latent dimensions jumps to the top. We also bootrap random weights and get similar results (`r supFig_cap(name = 'supFig_benchmark_weighting_ridges', display = 'cite')`).  Across the 11 integration methods we tested, scVI achieved the highest sumZScale for our scEiaD meta-atlas and furthermore is a desirable choice because of its very short run time (scVI can complete in less than an hour while fastMNN takes over 12 hours and CCA takes more than 24 hours).
+As the LISI and silhouette metrics provide independent cluster and cell type ("purity") and batch ("mixing") scores we looked to see whether the sumZScale scoring is highly influenced by changing the weight placed on purity or mixing by multiplying either by a multiplier of three (`r supFig_cap(name = 'supFig_benchmark_weighting', display = 'cite')`). While scVI still performed well, no matter the weight chosen, there were some changes when more weight was placed on batch mixing. Most notably fastMNN with 8 latent dims performed better than fastMNN with 30 latent dims. In a reveral of the fastMNN results, CCA with 30 latent dimensions performed better than CCA with 8 latent dimensions. We also bootstrap random weights across each individual metric and get similar results (`r supFig_cap(name = 'supFig_benchmark_weighting_ridges', display = 'cite')`). Across the 11 integration methods we tested, scVI achieved the highest sumZScale for our scEiaD meta-atlas and furthermore is a desirable choice because of its very short run time (scVI can complete in less than an hour while fastMNN takes over 12 hours and CCA takes more than 24 hours).
+
+
+
 
 ## Different normalization methods alter integration performance
 
 <!-- https://www.frontiersin.org/articles/10.3389/fgene.2020.00041/full -->
-There are several normalization approaches that have been used or published. The "standard" approach that the popular analysis packages Seurat and anndata use by default is to, per cell, divide the counts by the sum counts for the cell, multiply by a scaling factor, then log transform. This helps make the count distribution more normal, which is an assumption that many algorithms require. In contrast, the scran normalization method groups cells into pools and normalizes across the pool summed counts instead of the individual cell counts. We also use the square root (sqrt) normalization which replaces the log transformation with a square root. Library size (libSize) normalization omits the sqrt or log transformation. Finally some methods, like scVI, directly use the raw counts for modeling the data. 
+There are several normalization approaches that have been used or published. The "standard" approach that the popular analysis packages Seurat and scanpy use by default is to, per cell, divide the counts by the sum counts for the cell, multiply by a scaling factor, then log transform. This helps make the count distribution more normal, which is an assumption that many algorithms require. In contrast, the scran normalization method groups cells into pools and normalizes across the pool summed counts instead of the individual cell counts. We also use the square root (sqrt) normalization which replaces the log transformation with a square root. Library size (libSize) normalization omits the sqrt or log transformation. Finally some methods, like scVI, directly use the raw counts for modeling the data. 
 
 As expected the libSize normalization which omits the log or square root scaling generally performs the worst (`r fig_cap(name = 'figBenchmark', display = 'cite')`c). We see that the remaining normalization techniques alter the batch correction performance, though the outcome differs across the different methods. We also see that changing the number of latent dimensions (8 or 30) can occasionally dramatically change performance. These results demonstrate the importance of assessing performance in a rigorous manner across many parameters. 
 
@@ -220,8 +223,10 @@ figBenchmark_cap <- fig_cap(name='figBenchmark', caption =  'a. Example of a met
 source('figs_and_tables/fig_umap_benchmarking.R')
 plot_grid(
   plot_grid(
-    umap_plot_maker(umapCombat), 
-    umap_plot_maker(umapNone, color_against = 'study_accession'),
+    umap_plot_maker(umapCombat) + guides(color=guide_legend(title="cell type", 
+                                                            override.aes = list(size=7, alpha = 1))), 
+    umap_plot_maker(umapNone, color_against = 'study_accession') + guides(color=guide_legend(title="study accession",
+                                                                                             override.aes = list(size=7, alpha = 1))),
     rel_widths = c(1.3, 1),
     labels = c('a','b')), 
   plot_grid(
@@ -245,7 +250,7 @@ To find the best set of parameters for scVI in out dataset we did a grid search 
 
 To further study cell type specific expression patterning we needed to label the `r format(umapRef %>% nrow() - meta_filter %>% filter(!is.na(CellType)) %>% nrow(), big.mark=",", scientific=FALSE)` unlabeled cells. Traditionally this is done by clustering the cells, then using cell type specific markers to label the clusters. However, as we had hundreds of thousands of expert labeled cells across `r umapRef %>% filter(!is.na(CellType)) %>% left_join(gse) %>% pull(PMID) %>% unique() %>% length()` publications (`r fig_cap(name = 'fig1', display = 'cite')`a) we built a xgboost-based machine learning model that used 2/3 of the labeled cells as a training set (see methods for more details) to train a cell type predictor for scEiaD input. The trained model was used to predict the cell type assignments for all cells in scEiaD. In this manner we both label most cells (cells which cannot assign a cell type with a probability above 0.5 were left unlabeled) and correct a small number of probable mislabels in the truth set (`r fig_cap(name = 'figXGboost_umap', display = 'cite')`a). 
 
-As a brief case study of our ML performance, we look at the cell type labels assigned to a Shekhar et al. study where they used SMART-seq on a retinal bipolar cell enriched population of cells [@shekharComprehensiveClassificationRetinal2016] . Even though our ML algorithm was trained only on droplet-based data, our algorithm labels most of this dataset as retinal bipolar cells, with the next most common cell types being amacrine. The same result was found by Shekhkar et al. (`r supFig_cap(name = 'supFigShekharSMART', display = 'cite')`). To more generally evaluate performance we use the precision recall (PR) curve, which visualizes the ability of the model to precisely label known cells at a given confidence. The area under the PR curve (AUC) summarizes the effectiveness of the model across different cell types, with 1 being the highest performance. The xgboost model can predict rods, bipolar cells, and Müller glia with near perfect performance (`r supFig_cap(name = 'supFig_PR', display = 'cite')`). Most of the remaining cell types can be predicted with an AUC over 0.9 `r supTab_cap(name = 'supTab_AUCxgboost', display = 'cite')`. Several of the precursor cell types (photoreceptor, AC/HC, and neurogenic) were labeled with lower confidence `r supTab_cap(name = 'supTab_CTmislabels', display = 'cite')`. The next most common labels for these cell types were either other precursor cells (e.g. 100 AC/HC Precursors were labeled as Neurogenic) or the adjacent terminal cell type (e.g. 254 photoreceptor precursors were labeled as cones). Other cell types that were challenging for the model to predict were the artery, choriocapillaris, and vein. Artery, choriocapillaris, and vein are constructed from endothelial cells and we find that for all three of these, endothelial was the second most common label. Overall, our xgboost based ML model shows strong accuracy across the major cell types of the retina (overall AUC of 0.98). 
+As a brief case study of our ML performance, we look at the cell type labels assigned to the Shekhar et al. study where they used SMART-seq on a retinal bipolar cell enriched population of cells [@shekharComprehensiveClassificationRetinal2016] . Even though our ML algorithm was trained only on droplet-based data, our algorithm labels most of this dataset as retinal bipolar cells, with the next most common cell types being amacrine. The same result was found by Shekhkar et al. (`r supFig_cap(name = 'supFigShekharSMART', display = 'cite')`). To more generally evaluate performance we use the precision recall (PR) curve, which visualizes the ability of the model to precisely label known cells at a given confidence. The area under the PR curve (AUC) summarizes the effectiveness of the model across different cell types, with 1 being the highest performance. The xgboost model can predict rods, bipolar cells, and Müller glia with near perfect performance (`r supFig_cap(name = 'supFig_PR', display = 'cite')`). Most of the remaining cell types can be predicted with an AUC over 0.9 `r supTab_cap(name = 'supTab_AUCxgboost', display = 'cite')`. Several of the precursor cell types (photoreceptor, AC/HC, and neurogenic) were labeled with lower confidence `r supTab_cap(name = 'supTab_CTmislabels', display = 'cite')`. The next most common labels for these cell types were either other precursor cells (e.g. 100 AC/HC Precursors were labeled as Neurogenic) or the adjacent terminal cell type (e.g. 254 photoreceptor precursors were labeled as cones). Other cell types that were challenging for the model to predict were the artery, choriocapillaris, and vein. Artery, choriocapillaris, and vein are constructed from endothelial cells and we find that for all three of these, endothelial was the second most common label. Overall, our xgboost based ML model shows strong accuracy across the major cell types of the retina (overall AUC of 0.98). 
 
 
 ```{r figXGboost_umap, fig.width=18, fig.height=13, fig.cap=figXGboost_umap_cap, echo=FALSE, message = FALSE, warning = FALSE}
@@ -431,7 +436,7 @@ We have deposited the 10x (v2) fastq files for our iPSC-based RPE data in GEO at
 
 ## Quantification of gene counts
 
-Gene quantification is handled by the SnakeQUANT snakefile. First, we generated multiple quantification indices to facilitate calculation of RNA velocity. For each droplet technology, we generated a separate set of transcript sequences that contain both exonic and intronic sequences using the “get_velocity_files” function from the R package BUSpaRse. The reference transcriptome annotation used to build sets of transcript sequences were the Gencode “gencode.vM25.annotation.gtf.gz” and “gencode.v35.annotation.gtf.gz” for mouse and human, respectively [@harrowGENCODEReferenceHuman2012; @jGENCODEReferenceHuman2012]. Because the Macaca Fascicularis genome is less well annotated we used the Ensembl release 101 genome and transcriptome annotation “Macaca_mulatta.Mmul_101.gtf.gz”  [@yatesEnsembl20202020].  A single set of exonic transcript sequences was created for each species for all well techonologies. A kallisto quantification index was generated for each of these fastqs using kallisto index (0.46.2) [@brayNearoptimalProbabilisticRNAseq2016]. Well based samples were quantified using kallisto quant. For the relatively few single ended samples, the params “–single -l 200 -s 30” were used for kallisto quant. Otherwise the “–bias” flag was added. For the droplet-based samples, we adapted the bustools workflow for generating spliced and unspliced count matrices. (0.39.4) [@melstedBarcodeUMISet2019].
+Gene quantification is handled by the SnakeQUANT snakefile. First, we generated multiple quantification indices to facilitate calculation of RNA velocity. For each droplet technology, we generated a separate set of transcript sequences that contain both exonic and intronic sequences using the “get_velocity_files” function from the R package BUSpaRse. The reference transcriptome annotation used to build sets of transcript sequences were the Gencode “gencode.vM25.annotation.gtf.gz” and “gencode.v35.annotation.gtf.gz” for mouse and human, respectively [@harrowGENCODEReferenceHuman2012; @jGENCODEReferenceHuman2012]. Because the Macaca Fascicularis genome is less well annotated we used the Ensembl release 101 genome and transcriptome annotation “Macaca_mulatta.Mmul_101.gtf.gz”  [@yatesEnsembl20202020].  A single set of exonic transcript sequences was created for each species for all well techonologies. A kallisto quantification index was generated for each of these fastqs using kallisto index (0.46.2) [@brayNearoptimalProbabilisticRNAseq2016]. Well based samples were quantified using kallisto quant. For the relatively few single ended samples, the params “--single -l 200 -s 30” were used for kallisto quant. Otherwise the “--bias” flag was added. For the droplet-based samples, we adapted the bustools workflow for generating spliced and unspliced count matrices. (0.39.4) [@melstedBarcodeUMISet2019].
 
 ## Intersection of gene names between mouse, macaque, and human
 
@@ -503,11 +508,11 @@ While scEiaD distinguishes the major cell types very well, some of the cell type
 
 ## The scEiaD is a unique ocular resource that provides a highly diverse, large N dataset with a relatively small amount of compute power
 
-We have assembled the largest ocular single cell transcriptome database to date. The rapid of advancement of algorithms to batch correct and process data continue to reduce the computational requirements to handle huge numbers of cells. The scVI batch correction step on around one million cells runs within a few hours on a GPU and 150GB of memory. This places this crucial step within the capabilities of a moderately powerful computer or a cloud compute node. Further downstream processing can largely be done a computers with 64+ Gb of memory and a few hundred GB of disk space. We believe that our efforts can be replicated in any other tissue / system with a large number of independent studies by a small number of computational scientists following our general approach. We provide the completed analysis as both Scanpy (h5ad) and Seurat objects at https://github.com/davemcg/scEiaD. 
+We have assembled the largest ocular single cell transcriptome database to date. The rapid of advancement of algorithms to batch correct and process data continue to reduce the computational requirements to handle huge numbers of cells. The scVI batch correction step with around one million cells runs within an hour on a GPU and 150GB of memory. This places this crucial step within the capabilities of a moderately powerful computer or a cloud compute node. Further downstream processing can largely be done a computers with 64+ GB of memory and a few hundred GB of disk space. We believe that our efforts can be replicated in any other tissue / system with a large number of independent studies by a small number of computational scientists following our general approach. We provide the completed analysis as both Scanpy (h5ad) and Seurat objects (`r supTab_cap(name = 'supTab_links', display = 'cite')`). 
 
 ## Benchmarking and quantitation of integration performance is crucial for meta-atlas studies
 
-We originally intended to use the Seurat CCA method to integrate the datasets. However, the long run-times of CCA and poor integration of our known cell types led us to benchmark more methods and parameters. After adding more integration methods we first attempted "hand-assess" the integration results by using the UMAP 2D projection view. This proved to scale poorly and this led us to curate some of the more useful benchmarking algorithms (NMI, ARI, silhouette, and LISI) that roughly matched our "hand-assessed" results into the scPOP R package. While we chose the scVI algorithm, we strongly suggest any other groups attempting a similar meta-atlas construction chose a quantifiable set of criteria so optimal methods and parameters can be picked. 
+We originally intended to use the Seurat CCA method to integrate the datasets. However, the long run-times of CCA and poor integration of our known cell types led us to benchmark more methods and parameters. After adding more integration methods we first attempted "hand-assess" the integration results by using the UMAP 2D projection view. This proved to scale poorly and this led us to curate some of the more useful benchmarking algorithms (NMI, ARI, silhouette, and LISI) that roughly matched our "hand-assessed" results into the scPOP R package. While we chose the scVI algorithm, we strongly suggest any other groups attempting a similar meta-atlas construction chose a quantifiable set of criteria so optimal methods and parameters can be picked. We found in our analysis that substantial differences in the integration performance can come from altering the number of HVGs and the number of latent dimensions. 
 
 ## Transfer of cell type labels from a smaller number of studies onto the remainining cells is a powerful way to increase diversity in a meta-atlas
 
@@ -515,7 +520,7 @@ We first hand curated over 350,000 published cell type labels across 24 publicat
 
 ## Projection allows community knowledge to be leveraged by all
 
-Many retina atlases have been published to date. We argue that we have created the first atlas that is generally useful because 1. our dataset/atlas is several times larger than any other published set, 2. our data is available via download in several forms at https://github.com/davemcg/scEiaD, and crucially 3. we provide a Google colab/Jupyter notebook which step-by-step demonstrates out how to use scVI to project (or query) outside data onto our scEiaD with minimum compute resources. We demonstrate concretely how this can work by showing how iPSC RPE can be queried onto the reference dataset to demonstrate both similarities and dissimilarities in their transcriptomes.
+Many retina atlases have been published to date. We argue that we have created the first atlas that is generally useful because 1. our dataset/atlas is several times larger than any other published set, 2. our data is available via download in several forms at https://github.com/davemcg/scEiaD and Zenodo accession 5129265, and crucially 3. we provide a Google colab/Jupyter notebook which step-by-step demonstrates out how to use scVI to project (or query) outside data onto our scEiaD with minimum compute resources. We demonstrate concretely how this can work by showing how iPSC-based RPE can be queried onto the reference dataset to demonstrate both similarities and dissimilarities in their transcriptomes.
 
 # Supplemental Information
 ## Tables
