--- a/references.bib
+++ b/references.bib
@@ -5997,6 +5997,25 @@
   file = {/Users/mcgaugheyd/Zotero/storage/DKPAA357/Luecken et al. - 2020 - Benchmarking atlas-level data integration in singl.pdf;/Users/mcgaugheyd/Zotero/storage/R4CRNP9D/2020.05.22.html}
 }
 
+@article{lueckenCurrentBestPractices2019,
+  title = {Current Best Practices in Single-Cell {{RNA}}-Seq Analysis: A Tutorial},
+  shorttitle = {Current Best Practices in Single-Cell {{RNA}}-Seq Analysis},
+  author = {Luecken, M. D. and Theis, F. J.},
+  date = {2019-06-01},
+  journaltitle = {Molecular Systems Biology},
+  volume = {15},
+  number = {6},
+  pages = {e8746},
+  publisher = {{John Wiley \& Sons, Ltd}},
+  issn = {1744-4292},
+  doi = {10.15252/msb.20188746},
+  url = {https://www.embopress.org/doi/full/10.15252/msb.20188746},
+  urldate = {2021-07-26},
+  abstract = {Abstract Single-cell RNA-seq has enabled gene expression to be studied at an unprecedented resolution. The promise of this technology is attracting a growing user base for single-cell analysis methods. As more analysis tools are becoming available, it is becoming increasingly difficult to navigate this landscape and produce an up-to-date workflow to analyse one's data. Here, we detail the steps of a typical single-cell RNA-seq analysis, including pre-processing (quality control, normalization, data correction, feature selection, and dimensionality reduction) and cell- and gene-level downstream analysis. We formulate current best-practice recommendations for these steps based on independent comparison studies. We have integrated these best-practice recommendations into a workflow, which we apply to a public dataset to further illustrate how these steps work in practice. Our documented case study can be found at https://www.github.com/theislab/single-cell-tutorial. This review will serve as a workflow tutorial for new entrants into the field, and help established users update their analysis pipelines.},
+  keywords = {analysis pipeline development,computational biology,data analysis tutorial,single-cell RNA-seq},
+  file = {/Users/mcgaugheyd/Zotero/storage/8GQ4KTVA/2019 - Current best practices in single-cell RNA-seq anal.pdf}
+}
+
 @article{lukowskiGenerationHumanNeural2018,
   title = {Generation of Human Neural Retina Transcriptome Atlas by Single Cell {{RNA}} Sequencing},
   author = {Lukowski, Samuel and Lo, Camden and Sharov, Alexei and Nguyen, Quan and Fang, Lyujie and Hung, Sandy and Zhu, Ling and Zhang, Ting and Nguyen, Tu and Senabouth, Anne and Jabbari, Jafar and Welby, Emily and Sowden, Jane and Waugh, Hayley and Mackey, Adrienne and Pollock, Graeme and Lamb, Trevor and Wang, Peng-Yuan and Hewitt, Alex and Gillies, Mark and Powell, Joseph and Wong, Raymond},
